erase truncate, image widths, fix specs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,6 @@ body {
 }
 
 img {
-  width: 100%;
   margin: 0 auto;
 }
 
