--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -45,6 +45,7 @@
   padding-top: 7px;
   padding-bottom: 7px;
   clear: none;
+  width: 100%;
 }
 
 .updates {
