--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -7,10 +7,6 @@
   min-height: 100vh;
 }
 
-img.img-responsive.logo {
-    width: 56%;
-}
-
 #hero h3 {    
   font-size: 1.2em;
 }
@@ -18,7 +14,6 @@ img.img-responsive.logo {
 #community {
   font-size:4em;
   font-weight: 700;
-  font-family: "Noto Sans";
   transition: 3s ease;
   text-shadow: 1px 1px rgba(0,0,0,0.5);
 }
